--- a/client/src/notes-app.theme.scss
+++ b/client/src/notes-app.theme.scss
@@ -134,20 +134,20 @@ $mat-notes-blue: (
 
 
 $mat-notes-pink: (
-  50 : #fffbf7,
-  100: #fff5eb,
-  200: #ffefdd,
-  300: #fee9cf,
-  400: #fee4c5,
-  500: #fedfbb,
-  600: #fedbb5,
-  700: #fed7ac,
-  800: #fed2a4,
-  900: #fdca96,
-  A100: #fdca96,
-  A200: #fdca96,
-  A400: #fdca96,
-  A700: #fdca96,
+  50: #e0f7fa,
+  100: #b3ebf2,
+  200: #80deea,
+  300: #4dd0e1,
+  400: #26c6da,
+  500: #00bcd4,
+  600: #00b6cf,
+  700: #00adc9,
+  800: #00a5c3,
+  900: #0097b9,
+  A100: #e2f9ff,
+  A200: #afeeff,
+  A400: #7ce3ff,
+  A700: #63ddff,
   contrast: (
     50: $black-87-opacity,
     100: $black-87-opacity,
