--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,15 +1,15 @@
 <div class="navbar navbar-default">
   <div class="container">
-    <div id="navbar-main">
-      <ul class="nav navbar-nav">
-        <li><a routerLink="/">Home</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li *ngIf="!auth.isLoggedIn()"><a routerLink="/login">Sign in</a></li>
-        <li *ngIf="auth.isLoggedIn()"><a routerLink="/profile">{{ auth.getUserDetails()?.name }}</a></li>
-        <li *ngIf="auth.isLoggedIn()"><a (click)="auth.logout()">Logout</a></li>
-      </ul>
-    </div>
+    <!--<div id="navbar-main">-->
+      <!--<ul class="nav navbar-nav">-->
+        <!--<li><a routerLink="/">Home</a></li>-->
+      <!--</ul>-->
+      <!--<ul class="nav navbar-nav navbar-right">-->
+        <!--<li *ngIf="!auth.isLoggedIn()"><a routerLink="/">Sign in</a></li>-->
+        <!--<li *ngIf="auth.isLoggedIn()"><a routerLink="/profile">{{ auth.getUserDetails()?.name }}</a></li>-->
+        <!--<li *ngIf="auth.isLoggedIn()"><a (click)="auth.logout()">Logout</a></li>-->
+      <!--</ul>-->
+    <!--</div>-->
   </div>
 </div>
 
