--- a/client/src/app/landing-page/landing-page.component.html
+++ b/client/src/app/landing-page/landing-page.component.html
@@ -126,7 +126,7 @@
     <div class="row text-center">
       <p>
         &copy; <span id="copyright-years">2018</span> notify &nbsp;&bull;&nbsp; <a
-        href="https://github.com/anirudhkhanna/ng-notes" target="_blank">GitHub</a>
+        href="https://github.com/sevdashubham/nano.git" target="_blank">GitHub</a>
       </p>
 
       <script>
